# playwright_python

./: .gitignore  README.md  app.py  pyproject.toml
.midia/: 0c5679d3-de1b-41d9-8906-ae790cace06c.webm  5195676a-f2d1-455a-b233-a5da76ce6ef7.webm
app/routes/: home.py  pagtest.py
app/templates/: base.html
app/templates/home/: index.html
app/templates/includes/: navbar.html
app/templates/pagtest/: pagtest.html
app/tests/: record.py
app/tests/crmdev/: login.py
app/tests/playwright/: home_test.json
app/tests/playwright/features/: home.feature
app/tests/playwright/steps/: home_steps.py
app/tests/site-crm-dev/: login.py
midia/: 4eb2b580-5136-4596-9ea6-266a1609d89f.webm
