[tool.poetry]
name = "playwright-python"
version = "0.1.0"
description = ""
authors = ["lpinheirocl <lucas.pinheiro1014@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pytest-playwright = "^0.5.2"
playwright = "^1.47.0"
flask = "^3.0.3"
jinja2 = "^3.1.4"
pytest-bdd = "^7.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
